Moved both statistic store entity types to the document store